--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My First App</string>
+    <string name="app_name">Road Caution</string>
     <string name="stop">STOP</string>
     <string name="ChangeColor">Change</string>
 </resources>
